tests/transpiler/x/java/dataset_where_filter.error
exit status 1
Main.java:12: error: incompatible types: boolean cannot be converted to int
    static java.util.List<Result3> adults = new java.util.ArrayList<Result3>() {{ for (var person : people) { if (person.age >= 18) { add(new Result3(person.name, person.age, person.age >= 60)); } }}};
                                                                                                                                                                                          ^
Main.java:28: error: incompatible types: String cannot be converted to boolean
            System.out.println(person.name + " " + "is" + " " + person.age + " " + person.is_senior ? " (senior)" : "");
                                                                                   ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
